Solved creating envrionment problem

--- a/D2-Net.ipynb
+++ b/D2-Net.ipynb
@@ -9,23 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: torch in /Users/HEY/anaconda3/lib/python3.6/site-packages (1.7.1)\n",
-      "Requirement already satisfied: dataclasses; python_version < \"3.7\" in /Users/HEY/anaconda3/lib/python3.6/site-packages (from torch) (0.8)\n",
-      "Requirement already satisfied: numpy in /Users/HEY/anaconda3/lib/python3.6/site-packages (from torch) (1.19.4)\n",
-      "Requirement already satisfied: typing-extensions in /Users/HEY/anaconda3/lib/python3.6/site-packages (from torch) (3.7.4.3)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Collecting torch\n",
+      "  Downloading torch-1.8.1-cp39-none-macosx_10_9_x86_64.whl (119.6 MB)\n",
+      "\u001b[K     |████████████████████████████████| 119.6 MB 1.6 kB/s eta 0:00:01    |█████████▎                      | 34.9 MB 2.9 MB/s eta 0:00:29     |██████████                      | 37.6 MB 2.9 MB/s eta 0:00:28     |██████████████████████          | 82.5 MB 29.2 MB/s eta 0:00:02     |█████████████████████████████▎  | 109.5 MB 2.6 MB/s eta 0:00:04\n",
+      "\u001b[?25hRequirement already satisfied: numpy in /Users/HEY/anaconda3/envs/D2Net/lib/python3.9/site-packages (from torch) (1.20.2)\n",
+      "Collecting typing-extensions\n",
+      "  Downloading typing_extensions-3.10.0.0-py3-none-any.whl (26 kB)\n",
+      "Installing collected packages: typing-extensions, torch\n",
+      "Successfully installed torch-1.8.1 typing-extensions-3.10.0.0\n"
      ]
     }
    ],
    "source": [
-    "pip install torch"
+    "!pip install torch"
    ]
   },
   {
@@ -37,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -102,9 +105,7 @@
       "\n",
       "    package                    |            build\n",
       "    ---------------------------|-----------------\n",
-      "    ca-certificates-2021.5.25  |       hecd8cb5_1         111 KB\n",
       "    cached-property-1.5.2      |             py_0          11 KB\n",
-      "    certifi-2021.5.30          |   py39hecd8cb5_0         138 KB\n",
       "    cycler-0.10.0              |   py39hecd8cb5_0          16 KB\n",
       "    h5py-3.2.1                 |   py39h90fc2a2_0         946 KB\n",
       "    hdf5-1.10.6                |       hdbbcd12_0         3.0 MB\n",
@@ -117,32 +118,21 @@
       "    matplotlib-3.3.4           |   py39hecd8cb5_0          26 KB\n",
       "    matplotlib-base-3.3.4      |   py39h8b3ea08_0         5.1 MB\n",
       "    mkl-2021.2.0               |     hecd8cb5_269       100.0 MB\n",
-      "    mkl-service-2.3.0          |   py39h9ed2024_1          44 KB\n",
       "    mkl_fft-1.3.0              |   py39h4a7008c_2         167 KB\n",
       "    mkl_random-1.2.1           |   py39hb2f4e1b_2         282 KB\n",
       "    numpy-1.20.2               |   py39h4b4dc7a_0          23 KB\n",
       "    numpy-base-1.20.2          |   py39he0bd621_0         4.3 MB\n",
-      "    openssl-1.1.1k             |       h9ed2024_0         2.2 MB\n",
       "    pillow-8.2.0               |   py39h5270095_0         587 KB\n",
-      "    pip-21.1.1                 |   py39hecd8cb5_0         1.8 MB\n",
-      "    python-3.9.5               |       h88f2d9e_3         9.9 MB\n",
       "    scipy-1.6.2                |   py39hd5f7400_1        14.7 MB\n",
-      "    setuptools-52.0.0          |   py39hecd8cb5_0         724 KB\n",
-      "    six-1.15.0                 |   py39hecd8cb5_0          27 KB\n",
-      "    sqlite-3.35.4              |       hce871da_0         1.1 MB\n",
-      "    tornado-6.1                |   py39h9ed2024_0         587 KB\n",
       "    tqdm-4.59.0                |     pyhd3eb1b0_1          93 KB\n",
-      "    tzdata-2020f               |       h52ac0ba_0         113 KB\n",
       "    zstd-1.4.9                 |       h322a384_0         476 KB\n",
       "    ------------------------------------------------------------\n",
-      "                                           Total:       151.0 MB\n",
+      "                                           Total:       134.4 MB\n",
       "\n",
       "The following NEW packages will be INSTALLED:\n",
       "\n",
       "  blas               pkgs/main/osx-64::blas-1.0-mkl\n",
-      "  ca-certificates    pkgs/main/osx-64::ca-certificates-2021.5.25-hecd8cb5_1\n",
       "  cached-property    pkgs/main/noarch::cached-property-1.5.2-py_0\n",
-      "  certifi            pkgs/main/osx-64::certifi-2021.5.30-py39hecd8cb5_0\n",
       "  cycler             pkgs/main/osx-64::cycler-0.10.0-py39hecd8cb5_0\n",
       "  freetype           pkgs/main/osx-64::freetype-2.10.4-ha233b18_0\n",
       "  h5py               pkgs/main/osx-64::h5py-3.2.1-py39h90fc2a2_0\n",
@@ -153,8 +143,6 @@
       "  jpeg               pkgs/main/osx-64::jpeg-9b-he5867d9_2\n",
       "  kiwisolver         pkgs/main/osx-64::kiwisolver-1.3.1-py39h23ab428_0\n",
       "  lcms2              pkgs/main/osx-64::lcms2-2.12-hf1fd2bf_0\n",
-      "  libcxx             pkgs/main/osx-64::libcxx-10.0.0-1\n",
-      "  libffi             pkgs/main/osx-64::libffi-3.3-hb1e8313_2\n",
       "  libgfortran        pkgs/main/osx-64::libgfortran-3.0.1-h93005f0_2\n",
       "  libpng             pkgs/main/osx-64::libpng-1.6.37-ha441bb4_0\n",
       "  libtiff            pkgs/main/osx-64::libtiff-4.2.0-h87d7836_0\n",
@@ -166,47 +154,48 @@
       "  mkl-service        pkgs/main/osx-64::mkl-service-2.3.0-py39h9ed2024_1\n",
       "  mkl_fft            pkgs/main/osx-64::mkl_fft-1.3.0-py39h4a7008c_2\n",
       "  mkl_random         pkgs/main/osx-64::mkl_random-1.2.1-py39hb2f4e1b_2\n",
-      "  ncurses            pkgs/main/osx-64::ncurses-6.2-h0a44026_1\n",
       "  numpy              pkgs/main/osx-64::numpy-1.20.2-py39h4b4dc7a_0\n",
       "  numpy-base         pkgs/main/osx-64::numpy-base-1.20.2-py39he0bd621_0\n",
       "  olefile            pkgs/main/noarch::olefile-0.46-py_0\n",
-      "  openssl            pkgs/main/osx-64::openssl-1.1.1k-h9ed2024_0\n",
       "  pillow             pkgs/main/osx-64::pillow-8.2.0-py39h5270095_0\n",
-      "  pip                pkgs/main/osx-64::pip-21.1.1-py39hecd8cb5_0\n",
       "  pyparsing          pkgs/main/noarch::pyparsing-2.4.7-pyhd3eb1b0_0\n",
-      "  python             pkgs/main/osx-64::python-3.9.5-h88f2d9e_3\n",
-      "  python-dateutil    pkgs/main/noarch::python-dateutil-2.8.1-pyhd3eb1b0_0\n",
-      "  readline           pkgs/main/osx-64::readline-8.1-h9ed2024_0\n",
       "  scipy              pkgs/main/osx-64::scipy-1.6.2-py39hd5f7400_1\n",
-      "  setuptools         pkgs/main/osx-64::setuptools-52.0.0-py39hecd8cb5_0\n",
-      "  six                pkgs/main/osx-64::six-1.15.0-py39hecd8cb5_0\n",
-      "  sqlite             pkgs/main/osx-64::sqlite-3.35.4-hce871da_0\n",
-      "  tk                 pkgs/main/osx-64::tk-8.6.10-hb0a8c7a_0\n",
-      "  tornado            pkgs/main/osx-64::tornado-6.1-py39h9ed2024_0\n",
       "  tqdm               pkgs/main/noarch::tqdm-4.59.0-pyhd3eb1b0_1\n",
-      "  tzdata             pkgs/main/noarch::tzdata-2020f-h52ac0ba_0\n",
-      "  wheel              pkgs/main/noarch::wheel-0.36.2-pyhd3eb1b0_0\n",
-      "  xz                 pkgs/main/osx-64::xz-5.2.5-h1de35cc_0\n",
-      "  zlib               pkgs/main/osx-64::zlib-1.2.11-h1de35cc_3\n",
       "  zstd               pkgs/main/osx-64::zstd-1.4.9-h322a384_0\n",
       "\n",
       "\n",
-      "Proceed ([y]/n)? "
+      "\n",
+      "Downloading and Extracting Packages\n",
+      "tqdm-4.59.0          | 93 KB     | ##################################### | 100% \n",
+      "matplotlib-base-3.3. | 5.1 MB    | ##################################### | 100% \n",
+      "mkl-2021.2.0         | 100.0 MB  | ##################################### | 100% \n",
+      "mkl_random-1.2.1     | 282 KB    | ##################################### | 100% \n",
+      "mkl_fft-1.3.0        | 167 KB    | ##################################### | 100% \n",
+      "zstd-1.4.9           | 476 KB    | ##################################### | 100% \n",
+      "cycler-0.10.0        | 16 KB     | ##################################### | 100% \n",
+      "h5py-3.2.1           | 946 KB    | ##################################### | 100% \n",
+      "numpy-1.20.2         | 23 KB     | ##################################### | 100% \n",
+      "hdf5-1.10.6          | 3.0 MB    | ##################################### | 100% \n",
+      "cached-property-1.5. | 11 KB     | ##################################### | 100% \n",
+      "lcms2-2.12           | 284 KB    | ##################################### | 100% \n",
+      "kiwisolver-1.3.1     | 53 KB     | ##################################### | 100% \n",
+      "matplotlib-3.3.4     | 26 KB     | ##################################### | 100% \n",
+      "scipy-1.6.2          | 14.7 MB   | ##################################### | 100% \n",
+      "libtiff-4.2.0        | 462 KB    | ##################################### | 100% \n",
+      "numpy-base-1.20.2    | 4.3 MB    | ##################################### | 100% \n",
+      "imagesize-1.2.0      | 8 KB      | ##################################### | 100% \n",
+      "imageio-2.9.0        | 3.0 MB    | ##################################### | 100% \n",
+      "intel-openmp-2021.2. | 942 KB    | ##################################### | 100% \n",
+      "pillow-8.2.0         | 587 KB    | ##################################### | 100% \n",
+      "Preparing transaction: done\n",
+      "Verifying transaction: done\n",
+      "Executing transaction: done\n"
      ]
     }
    ],
    "source": [
-    "!conda install pytorch torchvision cudatoolkit=10.0 -c pytorch\n",
-    "!conda install h5py imageio imagesize matplotlib numpy scipy tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conda update -n base -c defaults conda"
+    "!conda install pytorch torchvision cudatoolkit=10.0 -c pytorch --yes\n",
+    "!conda install h5py imageio imagesize matplotlib numpy scipy tqdm --yes"
    ]
   },
   {
@@ -218,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,18 +216,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting wget\n",
+      "  Using cached wget-3.2.zip (10 kB)\n",
+      "Building wheels for collected packages: wget\n",
+      "  Building wheel for wget (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for wget: filename=wget-3.2-py3-none-any.whl size=9680 sha256=b335411429b46469e7abd78941884b37feca89d53c65b0b6035caf6c45eaef86\n",
+      "  Stored in directory: /Users/HEY/Library/Caches/pip/wheels/04/5f/3e/46cc37c5d698415694d83f607f833f83f0149e49b3af9d0f38\n",
+      "Successfully built wget\n",
+      "Installing collected packages: wget\n",
+      "Successfully installed wget-3.2\n"
+     ]
+    }
+   ],
    "source": [
-    "pip install wget"
+    "!pip install wget"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100% [....................................................] 30545768 / 30545768\n",
+      "Saved under models/d2_ots.pth\n",
+      "100% [....................................................] 30545768 / 30545768\n",
+      "Saved under models/d2_tf.pth\n",
+      "100% [....................................................] 30545747 / 30545747\n",
+      "Saved under models/d2_tf_no_phototourism.pth\n"
+     ]
+    }
+   ],
    "source": [
     "!python -m wget https://dsmn.ml/files/d2-net/d2_ots.pth -o models/d2_ots.pth\n",
     "!python -m wget https://dsmn.ml/files/d2-net/d2_tf.pth -o models/d2_tf.pth\n",
@@ -254,18 +272,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWarning:\u001b[0m You are using macOS 10.12.\r\n",
+      "We (and Apple) do not provide support for this old version.\r\n",
+      "You will encounter build failures with some formulae.\r\n",
+      "Please create pull requests instead of asking for help on Homebrew's GitHub,\r\n",
+      "Twitter or any other official channels. You are responsible for resolving\r\n",
+      "any issues you experience while you are running this\r\n",
+      "old version.\r\n",
+      "\r\n",
+      "\u001b[31mError:\u001b[0m The following directories are not writable by your user:\r\n",
+      "/usr/local/share/man/man5\r\n",
+      "/usr/local/share/man/man7\r\n",
+      "\r\n",
+      "You should change the ownership of these directories to your user.\r\n",
+      "  sudo chown -R $(whoami) /usr/local/share/man/man5 /usr/local/share/man/man7\r\n",
+      "\r\n",
+      "And make sure that your user has write permission.\r\n",
+      "  chmod u+w /usr/local/share/man/man5 /usr/local/share/man/man7\r\n"
+     ]
+    }
+   ],
    "source": [
-    "import torch"
+    "!brew install libomp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torch in /Users/HEY/anaconda3/envs/D2Net/lib/python3.9/site-packages (1.8.1)\n",
+      "Collecting torchvision\n",
+      "  Downloading torchvision-0.9.1-cp39-cp39-macosx_10_9_x86_64.whl (13.1 MB)\n",
+      "\u001b[K     |████████████████████████████████| 13.1 MB 2.8 MB/s eta 0:00:01    |████████████▎                   | 5.0 MB 4.3 MB/s eta 0:00:02     |████████████████████▊           | 8.5 MB 4.3 MB/s eta 0:00:02\n",
+      "\u001b[?25hRequirement already satisfied: numpy in /Users/HEY/anaconda3/envs/D2Net/lib/python3.9/site-packages (from torch) (1.20.2)\n",
+      "Requirement already satisfied: typing-extensions in /Users/HEY/anaconda3/envs/D2Net/lib/python3.9/site-packages (from torch) (3.10.0.0)\n",
+      "Requirement already satisfied: pillow>=4.1.1 in /Users/HEY/anaconda3/envs/D2Net/lib/python3.9/site-packages (from torchvision) (8.2.0)\n",
+      "Installing collected packages: torchvision\n",
+      "Successfully installed torchvision-0.9.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip3 install torch torchvision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "dlopen(/Users/HEY/anaconda3/lib/python3.6/site-packages/torch/_C.cpython-36m-darwin.so, 2): Library not loaded: @rpath/libtorch_cpu.dylib\n  Referenced from: /Users/HEY/anaconda3/lib/python3.6/site-packages/torch/lib/libtorch_python.dylib\n  Reason: image not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-c3be106c8920>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mimageio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/torch/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    188\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mUSE_GLOBAL_DEPS\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m         \u001b[0m_load_global_deps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 190\u001b[0;31m     \u001b[0;32mfrom\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    191\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    192\u001b[0m \u001b[0;31m# Appease the type checker; ordinarily this binding is inserted by the\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: dlopen(/Users/HEY/anaconda3/lib/python3.6/site-packages/torch/_C.cpython-36m-darwin.so, 2): Library not loaded: @rpath/libtorch_cpu.dylib\n  Referenced from: /Users/HEY/anaconda3/lib/python3.6/site-packages/torch/lib/libtorch_python.dylib\n  Reason: image not found"
+     ]
+    }
+   ],
    "source": [
     "import argparse\n",
     "import numpy as np\n",
@@ -417,6 +497,13 @@
     "            )\n",
     "    else:\n",
     "        raise ValueError('Unknown output type.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tuning on MegaDepth"
    ]
   }
  ],
